--- a/SASSY/Front_End/src/index.css
+++ b/SASSY/Front_End/src/index.css
@@ -21,17 +21,21 @@ heading-font {
 :root {
 	--font-base: "DM Sans", sans-serif;
 
-	--primary-color: #edf2f8;
-	--secondary-color: #eb048c;
+	--primary-color: #030303;
+	--orange: #ff8b1f;
+	--dark-orange: #cf9a6a;
+	--dark-color: #141414;
 	--black-color: #030303;
-	--lightGray-color: #e4e4e4;
+	--light-color: #e4e4e4;
 	--gray-color: #6b7688;
 	--light-gray-color: #9ba4b3;
 	--brown-color: #46364a;
 	--white-color: #ffffff;
-	--background-color: #100c1c;
-	--dark-blue: rgb(34, 31, 53);
-	--less-dark-blue: rgb(44, 41, 63);
+	--background-color: #ece8e1;
+	--secondary-background-color: #f5f5f5;
+	--light-green: #b9f2b9;
+	--green: #07b907;
+	--dark-green: #78ab73;
 	--shadow-color: rgba(0, 0, 0, 0.2);
 }
 
