--- a/SASSY/Front_End/templates/frontend/index.html
+++ b/SASSY/Front_End/templates/frontend/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SASSY</title>
+		<link rel="icon" href="./Favicon.png" type="image/x-icon" />
     {% load static %}
 </head>
 <body>
