--- a/SASSY/Front_End/src/components/Navbar/Navbar.scss
+++ b/SASSY/Front_End/src/components/Navbar/Navbar.scss
@@ -28,6 +28,16 @@
 	& a {
 		font-weight: bold;
 	}
+
+	& svg {
+		width: 50px;
+		height: 50px;
+		background-color: var(--less-dark-color);
+		padding: 0.4rem;
+		border-radius: $border-radius-lg;
+
+		cursor: pointer;
+	}
 }
 
 .app__navbar-logo {
@@ -39,7 +49,8 @@
 		width: $img-size-lg;
 		height: $img-size-lg;
 		// margin-top: 1rem;
-		padding: 0.2rem;
+
+		margin: 0.5rem 0;
 
 		@media screen and (max-width: $md) {
 			width: $img-size-md;
@@ -96,13 +107,6 @@
 	justify-content: center;
 	align-items: center;
 
-	svg {
-		width: 70%;
-		height: 70%;
-
-		cursor: pointer;
-	}
-
 	div {
 		position: fixed;
 		top: 0;
@@ -111,6 +115,7 @@
 		z-index: 5;
 
 		padding: $padding-md;
+		padding-top: 0.9rem;
 
 		width: 80%;
 		height: 100vh;
@@ -121,19 +126,13 @@
 		flex-direction: column;
 
 		// background: url("../../assets/bgWhite.png");
-		background-color: var(--secondary-background-color);
+		background-color: var(--lesser-dark-color);
 		// background-size: cover;
 		// background-repeat: repeat;
 
-		svg {
-			width: 35px;
-			height: 35px;
-			color: var(--orange);
-		}
-
 		ul {
 			list-style: none;
-			margin: 0;
+			margin: 1rem 0 0 0;
 			padding: 0;
 			height: 100%;
 			width: 100%;
@@ -154,12 +153,12 @@
 					border-radius: $border-radius-lg;
 					text-decoration: none;
 					text-transform: uppercase;
+					color: inherit;
 
 					transition: all 0.3s ease-in-out;
 
 					&:hover {
-						color: var(--orange);
-						background-color: var(--white-color);
+						background-color: var(--less-dark-color);
 					}
 				}
 			}
