--- a/SASSY/Front_End/src/components/Navbar/Navbar.scss
+++ b/SASSY/Front_End/src/components/Navbar/Navbar.scss
@@ -1,11 +1,14 @@
 @import "../../App.scss";
 
+.app__navbar,
+.app__navbar-logo {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
 .app__navbar {
 	width: 100%;
-	// height: 5rem;
-	// @media screen and (max-width: $md) {
-	// 	height: 4rem;
-	// }
 
 	color: var(--light-color);
 	padding: 0.3rem $padding-lg;
@@ -14,37 +17,15 @@
 		padding-right: $padding-md;
 	}
 
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-
-	backdrop-filter: blur(4px);
-	-webkit-backdrop-filter: blur(4px);
 	background-color: var(--dark-color);
 	position: sticky;
 	top: 0;
 	z-index: 100;
 
-	& a {
-		font-weight: bold;
-	}
-
-	& svg {
-		width: 50px;
-		height: 50px;
-		background-color: var(--less-dark-color);
-		padding: 0.4rem;
-		border-radius: $border-radius-lg;
-
-		cursor: pointer;
-	}
+	justify-content: space-between;
 }
 
 .app__navbar-logo {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-
 	& > img {
 		width: $img-size-lg;
 		height: $img-size-lg;
@@ -60,116 +41,5 @@
 
 	& > h1 {
 		margin-left: 0.5rem;
-	}
-}
-
-.app__navbar-links {
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-
-	list-style: none;
-
-	li {
-		margin: 0 2rem 0 0;
-		cursor: pointer;
-		text-transform: uppercase;
-
-		&:last-child {
-			margin-right: 0;
-		}
-
-		a {
-			flex-direction: column;
-			color: inherit;
-
-			transition: color 0.3s ease-in-out;
-			padding-bottom: 0.2rem;
-
-			&:hover {
-				color: var(--white-color);
-				border-bottom: 3px solid var(--light-green);
-			}
-		}
-	}
-
-	@media screen and (max-width: $md) {
-		display: none;
-	}
-}
-
-.app__navbar-menu {
-	width: $img-size-md;
-	height: $img-size-md;
-	position: relative;
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	div {
-		position: fixed;
-		top: 0;
-		bottom: 0;
-		right: 0;
-		z-index: 5;
-
-		padding: $padding-md;
-		padding-top: 0.9rem;
-
-		width: 80%;
-		height: 100vh;
-
-		display: flex;
-		justify-content: flex-end;
-		align-items: flex-end;
-		flex-direction: column;
-
-		// background: url("../../assets/bgWhite.png");
-		background-color: var(--lesser-dark-color);
-		// background-size: cover;
-		// background-repeat: repeat;
-
-		ul {
-			list-style: none;
-			margin: 1rem 0 0 0;
-			padding: 0;
-			height: 100%;
-			width: 100%;
-
-			display: flex;
-			justify-content: flex-start;
-			align-items: flex-start;
-			flex-direction: column;
-
-			li {
-				width: 100%;
-
-				a {
-					// color: var(--gray-color);
-					width: 100%;
-					display: block;
-					padding: 1rem;
-					border-radius: $border-radius-lg;
-					text-decoration: none;
-					text-transform: uppercase;
-					color: inherit;
-
-					transition: all 0.3s ease-in-out;
-
-					&:hover {
-						background-color: var(--less-dark-color);
-					}
-				}
-			}
-		}
-
-		@media screen and (min-width: $md) {
-			display: none;
-		}
-	}
-
-	@media screen and (min-width: $md) {
-		display: none;
 	}
 }
