--- a/SASSY/Front_End/src/pages/Doctor/Doctor.scss
+++ b/SASSY/Front_End/src/pages/Doctor/Doctor.scss
@@ -1,30 +1,5 @@
-@import "../../App.scss";
+@import "../../styles/Variables.scss";
 
 .doctor-subheading {
 	margin: 1.5rem 0 1rem 0;
-}
-
-.react-tabs__tab {
-	padding: 1rem 2rem;
-	border: none;
-	cursor: pointer;
-
-	bottom: -2px;
-}
-
-.react-tabs__tab-list {
-	border-bottom: 2px solid var(--green);
-}
-
-.react-tabs__tab--selected {
-	border: 2px solid var(--green);
-	border-bottom: none;
-	border-color: var(--green);
-	border-radius: $border-radius-sm $border-radius-sm 0 0;
-	color: inherit;
-	background-color: var(--secondary-background-color);
-}
-
-.react-tabs__tab:last-child {
-	margin-right: 0;
 }
