--- a/SASSY/Front_End/src/components/Navbar/Navbar.scss
+++ b/SASSY/Front_End/src/components/Navbar/Navbar.scss
@@ -33,7 +33,7 @@
 
     margin: 0.5rem 0;
 
-    @media screen and (max-width: $md) {
+    @media screen and (max-width: $sm) {
       width: $img-size-md;
       height: $img-size-md;
     }
