--- a/SASSY/Front_End/src/index.css
+++ b/SASSY/Front_End/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Varela&family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Varela&family=Bebas+Neue&family=Montserrat:wght@900&display=swap");
 
 * {
   box-sizing: border-box;
