--- a/SASSY/Front_End/src/components/FrontDeskOperator/FrontDeskOperator.css
+++ b/SASSY/Front_End/src/components/FrontDeskOperator/FrontDeskOperator.css
@@ -38,6 +38,8 @@
 
 @media screen and (max-width: 1200px) {
     .AppGlass {
+        justify-content: center;
+        align-items: center;
         grid-template-columns: 10% 50% auto;
         overflow-y: scroll;
     }
