todo: breadcrumb name; routes mapping is giving infinite recursion error

--- a/SASSY/Front_End/src/index.css
+++ b/SASSY/Front_End/src/index.css
@@ -40,6 +40,8 @@ heading-font {
   --less-light-green: #a1ffa1;
   --green: #07b907;
   --dark-green: #78ab73;
+  --bright-blue: #0096ff;
+  --cobalt-blue: #0047ab;
   --danger-color: #bb2124;
   --warning-color: #f0ad4e;
   --info-color: #5bc0de;
