--- a/SASSY/Front_End/src/App.scss
+++ b/SASSY/Front_End/src/App.scss
@@ -180,21 +180,43 @@ button {
   max-width: $xsm;
   width: 100%;
   display: block;
-  margin: 1rem auto;
+  margin: 2rem auto 0 auto;
 }
 
 .form-container {
   margin: 0 auto;
+  background-color: var(--secondary-background-color);
+  padding: 2rem;
+  border-radius: $border-radius;
+  box-shadow: 0px 0px 10px 0 var(--shadow-color);
 
   & h1 {
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
   }
 
-  & .form-container-div {
+  & .form-container-div,
+  & .form-container-div-sm {
     display: grid;
-    gap: 1rem;
+    gap: 2rem;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
+    @media screen and (max-width: $amd) {
+      gap: 1rem;
+    }
+
+    & .span-full {
+      grid-column: 1 / -1;
+      margin: 1rem 0;
+
+      @media screen and (max-width: $amd) {
+        margin-top: 0;
+      }
+    }
+  }
+
+  & .form-container-div-sm {
+    gap: 1rem;
   }
 }
 
@@ -203,7 +225,7 @@ select,
 textarea {
   width: 100%;
   padding: 1rem 0.5rem;
-  border-radius: $border-radius;
+  border-radius: $border-radius-sm;
 
   border: $border-width solid var(--green);
   outline: none;
