TODO: protected routing

--- a/SASSY/Front_End/src/index.css
+++ b/SASSY/Front_End/src/index.css
@@ -23,7 +23,7 @@ heading-font {
 
   --primary-color: #333;
   --light-orange: #ff9f1c;
-  --orange: #ff8b1f;
+  --orange: #f29a13;
   --dark-orange: #cf9a6a;
   --lesser-dark-color: #1f1f1f;
   --less-dark-color: #2c2c2c;
