--- a/SASSY/Front_End/src/components/Navbar/Navbar.scss
+++ b/SASSY/Front_End/src/components/Navbar/Navbar.scss
@@ -27,8 +27,8 @@
   justify-content: space-between;
 
   & svg {
-    width: 37px;
-    height: 37px;
+    width: 3rem;
+    height: 3rem;
     background-color: var(--less-dark-color);
     padding: 0.4rem;
     border-radius: $border-radius;
@@ -94,8 +94,6 @@
 }
 
 .app__navbar-menu {
-  width: $img-size-md;
-  height: $img-size-md;
   position: relative;
 
   display: flex;
@@ -170,5 +168,8 @@
 }
 
 .logout-btn {
-  margin-left: 1rem;
+  margin-left: 2rem;
+  @media screen and (max-width: $xsm) {
+    margin-left: 1rem;
+  }
 }
