--- a/SASSY/Front_End/src/components/Navbar/Navbar.scss
+++ b/SASSY/Front_End/src/components/Navbar/Navbar.scss
@@ -27,8 +27,8 @@
   justify-content: space-between;
 
   & svg {
-    width: 3rem;
-    height: 3rem;
+    width: 2.75rem;
+    height: 2.75rem;
     background-color: var(--less-dark-color);
     padding: 0.4rem;
     border-radius: $border-radius;
@@ -59,6 +59,10 @@
   & > h1 {
     margin-left: 0.75rem;
     font-size: 2.5rem;
+
+    @media screen and (max-width: $sm) {
+      font-size: 2rem;
+    }
   }
 }
 
