--- a/SASSY/Front_End/src/components/Navbar/Navbar.scss
+++ b/SASSY/Front_End/src/components/Navbar/Navbar.scss
@@ -1,7 +1,9 @@
 @import "../../styles/Variables.scss";
 
 .app__navbar,
-.app__navbar-logo {
+.app__navbar-container,
+.app__navbar-logo,
+.app__navbar-links {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -23,6 +25,21 @@
   z-index: 100;
 
   justify-content: space-between;
+
+  & svg {
+    width: 2.75rem;
+    height: 2.75rem;
+    background-color: var(--less-dark-color);
+    padding: 0.4rem;
+    border-radius: $border-radius;
+
+    cursor: pointer;
+  }
+}
+
+.app__navbar-container {
+  flex-grow: 1;
+  justify-content: space-between;
 }
 
 .app__navbar-logo {
@@ -41,6 +58,118 @@
 
   & > h1 {
     margin-left: 0.75rem;
-    font-size: 2.5rem;
+    font-size: 2rem;
+  }
+}
+
+.app__navbar-links {
+  list-style: none;
+
+  li {
+    margin: 0 2rem 0 0;
+    cursor: pointer;
+    text-transform: uppercase;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    a {
+      flex-direction: column;
+      color: inherit;
+
+      transition: color 0.3s ease-in-out;
+      padding-bottom: 0.2rem;
+
+      &:hover {
+        color: var(--white-color);
+        border-bottom: 3px solid var(--light-green);
+      }
+    }
+  }
+
+  @media screen and (max-width: $amd) {
+    display: none;
+  }
+}
+
+.app__navbar-menu {
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  div {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 5;
+
+    padding: $padding-md;
+    padding-top: 0.9rem;
+
+    @media screen and (min-width: $sm) {
+      padding-top: 1rem;
+    }
+
+    width: 80%;
+    height: 100vh;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+
+    background-color: var(--lesser-dark-color);
+
+    ul {
+      list-style: none;
+      margin: 1rem 0 0 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-direction: column;
+
+      li {
+        width: 100%;
+
+        a {
+          width: 100%;
+          display: block;
+          padding: 1rem;
+          border-radius: $border-radius-lg;
+          text-decoration: none;
+          text-transform: uppercase;
+          color: inherit;
+
+          transition: all 0.3s ease-in-out;
+
+          &:hover {
+            background-color: var(--less-dark-color);
+          }
+        }
+      }
+    }
+
+    @media screen and (min-width: $amd) {
+      display: none;
+    }
+  }
+
+  @media screen and (min-width: $amd) {
+    display: none;
+  }
+}
+
+.logout-btn {
+  margin-left: 2rem;
+  @media screen and (max-width: $xsm) {
+    margin-left: 1rem;
   }
 }
