--- a/SASSY/Front_End/src/pages/FrontDeskPage/FDAdmitForm/FDAdmit.css
+++ b/SASSY/Front_End/src/pages/FrontDeskPage/FDAdmitForm/FDAdmit.css
@@ -7,7 +7,7 @@
     position: relative;
     max-width: 500px;
     width: 100%;
-    height: 350px;
+    height: 266px;
     border-radius: 6px;
     padding: 30px;
     margin: 0 15px;
@@ -36,15 +36,15 @@
 .containerAdmit form {
     position: relative;
     margin-top: 16px;
-    min-height: 250px;
+    min-height: 190px;
     background-color: #fff;
     overflow: hidden;
 }
 
 .IDBtn {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
 }
 
 .containerAdmit form .form {
