TODO: limiting table columns for every screen size, patient's profile, proper routing

--- a/SASSY/Front_End/src/components/Modal/Modal.scss
+++ b/SASSY/Front_End/src/components/Modal/Modal.scss
@@ -7,7 +7,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  max-width: $sm;
+  max-width: $md;
   width: 100%;
 
   max-height: 80%;
@@ -38,4 +38,10 @@
 
 .close-modal {
   text-align: right;
+  transition: all $transition;
+  color: var(--gray-color);
+
+  &:hover {
+    color: var(--primary-color);
+  }
 }
