TODO: proper routing (impossible), render patient profile

--- a/SASSY/Front_End/src/components/Table/Table.scss
+++ b/SASSY/Front_End/src/components/Table/Table.scss
@@ -70,7 +70,9 @@ table {
       }
     }
   }
+}
 
+.shrink-table {
   @media screen and (max-width: $md) {
     tr th:nth-child(1),
     tr td:nth-child(1) {
