--- a/SASSY/Front_End/src/pages/Login/Login.scss
+++ b/SASSY/Front_End/src/pages/Login/Login.scss
@@ -3,4 +3,8 @@
 .login-form-container {
   max-width: $xsm;
   margin-top: 15vh;
+
+  & div.form-container-div-sm {
+    grid-template: none;
+  }
 }
