--- a/SASSY/Front_End/src/pages/DataEntryPage/Patient/PatientMedReport.css
+++ b/SASSY/Front_End/src/pages/DataEntryPage/Patient/PatientMedReport.css
@@ -9,6 +9,8 @@
     height: 400px;
     max-width: 1200px;
     overflow-y: scroll;
+    /* position: absolute;
+    top: 100px; */
     background: linear-gradient(106.37deg,
             #ffe1bc 29.63%,
             #ffcfd1 51.55%,
