--- a/SASSY/Front_End/src/pages/FrontDeskPage/SideBar/SideBar.css
+++ b/SASSY/Front_End/src/pages/FrontDeskPage/SideBar/SideBar.css
@@ -9,6 +9,7 @@
 /* logo */
 .bars {
   display: none;
+  transition: all 300ms ease;
 }
 
 .logo {
@@ -20,6 +21,7 @@
   align-items: center;
   justify-content: center;
   height: 4%;
+
 }
 
 .logo>span>span {
@@ -87,7 +89,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
   .sidebar {
     position: fixed;
     z-index: 9;
@@ -95,6 +97,8 @@
     width: 55%;
     padding-right: 1rem;
     height: 100%;
+    position: absolute;
+    left: '-60%'
   }
 
   .menuItem>span {
@@ -119,6 +123,10 @@
     padding: 10px;
     border-radius: 10px;
     z-index: 9;
+    cursor: pointer;
+    transition: all 300ms ease;
+
+
   }
 
   .close {
